gitops/env/stage2/templates/abfs.yaml
# Copyright (c) 2024-2025 Accenture, All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: abfs-module-daemonset
  namespace: jenkins
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      app: abfs-module
  template:
    metadata:
      labels:
        app: abfs-module
    spec:
      nodeSelector:
        workloadLabel: android-abfs
      tolerations:
        - key: "workloadType"
          operator: "Equal"
          value: "android-abfs"
          effect: "NoSchedule"
      serviceAccountName: jenkins-sa
      containers:
        - name: abfs-module
          image: ubuntu:24.04
          securityContext:
            privileged: true
          command:
            - /bin/sh
            - -c
            - |
              apt update -y && \
              apt install -y apt-transport-https ca-certificates gnupg curl kmod && \
              curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg && \
              echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
              apt update -y && apt install -y google-cloud-cli && \
              echo 'deb http://packages.cloud.google.com/apt apt-transport-artifact-registry-stable main' | tee -a /etc/apt/sources.list.d/artifact-registry.list && \
              curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
              apt update -y && apt install -y apt-transport-artifact-registry && \
              echo 'deb ar+https://us-apt.pkg.dev/projects/abfs-binaries abfs-apt-alpha-public main' | tee -a /etc/apt/sources.list.d/artifact-registry.list && \
              apt update -y && apt install -y casfs-kmod-$(uname -r) && \
              sleep infinity

          volumeMounts:
            - name: modules
              mountPath: /lib/modules
              readOnly: false
      volumes:
        - name: modules
          hostPath:
            path: /lib/modules
